# Clinical-RAG

./: .coverage  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
backend/: Dockerfile  filipino.md  german.md  pyproject.toml  test_api.db
backend/alembic/: env.py
backend/alembic/versions/: 4c44e1f5ed89_initial_schema.py  8d2773e05041_rename_profile_to_users_and_add_auth.py
backend/app/: logger.py  main.py
backend/app/agent/: README.md
backend/app/agent/chat/: context.py  edges.py  main.py  nodes.py  state.py  tools.py
backend/app/agent/indexing/: context.py  edges.py  main.py  nodes.py
backend/app/agent/react_agent/: context.py  main.py  nodes.py  state.py
backend/app/agent/retrieval/: context.py  main.py  nodes.py  prompts.py  state.py
backend/app/agent/retriever/: context.py  nodes.py  prompts.py
backend/app/core/: config.py  database.py  security.py  vector.py
backend/app/data/reports/: chunked_documents.json  evaluation_report.json  ingestion_pipeline_report.md  ingestion_report.json  retrieval_data.json  synthetic_golden_dataset.json  test_report.md
backend/app/db/: chat.py  models.py
backend/app/rag/: chunker.py  constants.py  db.py  embeddings.py  indexing.py  models.py  utils.py
backend/app/routes/dependencies/: auth.py  chat_agent.py  chat_service.py  chunker.py  data_generator.py  db_session.py  embedding.py  evaluator.py  rag.py  settings_service.py  tokenizer.py  vector_db.py
backend/app/routes/v1/: auth.py  catalog.py  chat.py  indexing.py  main.py  rag.py  settings.py  users.py  vector_db.py
backend/app/schemas/: user.py
backend/app/scripts/: create_ingestion_report.py  create_retrieval_report.py  eng.md  evaluate.py  filipinodeepseek-ai_DeepSeek-V3.2.md  machine_translation_test.py  spanishdeepseek-ai_DeepSeek-V3.2.md  test_docling.py
backend/app/services/: catalog_service.py  chat.py  indexing_status.py  rag.py  scrapper.py  settings_service.py
backend/app/services/evaluation/: data_generator.py  dataset.py  evaluator.py
backend/app/services/file_store/: context_manager.py
backend/app/services/llm/: _pricing_information.py  _tokenizer_list.py  calculate_cost.py  factory.py  tokenizer.py
backend/tests/: test_utils.py
backend/tests/api/: __init__.py  conftest.py  test_auth.py  test_catalog_routes.py  test_chat_routes.py  test_indexing_routes.py  test_settings_routes.py  test_users.py  test_vector_db_routes.py
backend/tests/app/: test_chunker.py  test_indexing_rag_service.py  test_rag_utils.py
deployment/: docker-compose.yml
docs/: cloud_architecture.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(admin)/: layout.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(chat)/: layout.tsx  page.tsx
frontend/src/components/: providers.tsx
frontend/src/components/chat/: agent-selector.tsx  chat-interface.tsx  chat-intro.tsx  chat-loading.tsx  message-bubble.tsx  (+1 more)
frontend/src/hooks/: use-catalog.ts  use-chat-session.ts  use-chat-sessions.ts  use-indexing.ts  use-settings.ts
frontend/src/lib/: agents-config.ts  api-client.ts  constants.ts  dummy-db.json
(+10 files in other folders)
