[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ag-ui-protocol>=0.1.10",
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "boto3>=1.42.35",
    "chromadb==1.4.1",
    "crawl4ai[pdf]>=0.8.0",
    "deepeval>=3.8.1",
    "docling>=2.70.0",
    "docling-core[chunking]>=2.61.0",
    "en-core-web-sm",
    "fastapi[standard]>=0.128.0",
    "hf-xet>=1.2.0",
    "langchain>=1.2.4",
    "langchain-anthropic>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-google-genai>=4.2.0",
    "langchain-nebius>=0.1.3",
    "langchain-nomic>=1.0.1",
    "langchain-openai>=1.1.7",
    "langchain-openrouter>=0.0.2",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.6",
    "orjson>=3.11.5",
    "playwright>=1.57.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "pymilvus>=2.6.6",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "sentence-transformers>=5.2.2",
    "spacy>=3.8.11",
    "sqlalchemy>=2.0.46",
    "structlog>=25.5.0",
    "tenacity>=9.1.2",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=4.57.6",
    "types-boto3[s3]>=1.42.35",
    "validators>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
    "types-requests>=2.32.4.20260107",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cuda", marker = "sys_platform != 'darwin'" }
]
torchaudio = [
  { index = "pytorch-cuda", marker = "sys_platform != 'darwin'" }
]
torchvision = [
  { index = "pytorch-cuda", marker = "sys_platform != 'darwin'" }
]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }


[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
explicit_package_bases = true

[tool.ruff]
target-version= "py311"

[tool.ruff.lint]
# E: pycodestyle, F: pyflakes, I: isort (imports), B: bugbear (common bugs)
select = ["E", "F", "I", "B"]
ignore = []

[tool.pytest.ini_options]
pythonpath = "."
minversion = "6.0"
addopts = "-ra -v --cov=app"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests"
]

[tool.coverage.run]
omit = [
    "app/logger.py",           # Pure boilerplate
    "app/rag/_smoke_test_docs.py", # Test artifacts
    "*/__init__.py"            # Empty init files
]

[tool.coverage.report]
skip_empty = true
precision = 2
# fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
